expressjs update style

--- a/src/views/ListBooks.pug
+++ b/src/views/ListBooks.pug
@@ -1,6 +1,6 @@
 html
   head
-    title About me
+    title Books list
     link(rel="stylesheet", href="/static/css/app.css")
   body
      div.container
