--- a/src/views/product.pug
+++ b/src/views/product.pug
@@ -1,6 +1,6 @@
 html
   head
-    title About me
+    title Products item
     link(rel="stylesheet", href="/static/css/app.css")
   body
     div.container
