--- a/src/views/ListBooks.pug
+++ b/src/views/ListBooks.pug
@@ -25,5 +25,5 @@ html
       div.ColBks3
         div.ColBks
           p.textCente JSONBooks
-          p= JSON.stringify(listBooks.data)
+          pre= listBooks
           
