--- a/src/views/item.pug
+++ b/src/views/item.pug
@@ -28,4 +28,4 @@ html
       div.column3
          div.ColBks
            p.textCente JSONBooksId
-           p= JSON.stringify(item.data)
+           pre= item
