--- a/src/views/listProduct.pug
+++ b/src/views/listProduct.pug
@@ -25,4 +25,4 @@ html
       div.column3
          div.ColBks
            p.textCente JSONProduct
-           p= JSON.stringify(listProduct.data)
+           pre= products
