--- a/src/views/product.pug
+++ b/src/views/product.pug
@@ -26,4 +26,4 @@ html
       div.column3
          div.ColBks
            p.textCente JSONProductId
-           p= JSON.stringify(product.data)
+           pre= product
